--- a/app/src/main/res/layout/activity_mains.xml
+++ b/app/src/main/res/layout/activity_mains.xml
@@ -11,7 +11,7 @@
         android:id="@+id/main_fragment"
         android:name="androidx.navigation.fragment.NavHostFragment"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="match_parent"
         android:layout_weight="1"
         app:defaultNavHost="true"
         app:layout_constraintBottom_toTopOf="@+id/main_navigation" />
@@ -26,8 +26,10 @@
         style="@style/BottomNavigationStyle"
         android:layout_width="match_parent"
         android:layout_height="48dp"
+        android:layout_alignParentBottom="true"
         android:layout_marginStart="0dp"
         android:layout_marginEnd="0dp"
+        android:layout_weight="0"
         android:background="@color/white"
         android:elevation="0dp"
         app:insetForeground="@android:color/transparent"
